@@ -1,3 +1,9 @@
+Tue Jun 24 13:30:31  2008  Steve Huston  <shuston@riverace.com>
+
+        * ace/CDR_Stream.h: For ACE_OutputCDR, note that attempting to set a
+          specific byte order requires ACE_ENABLE_SWAP_ON_WRITE to have any
+          affect. Thanks to Howard Finer for pointing this out.
+
 Tue Jun 24 11:46:41 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * ace/Monitor_Control/Bytes_Received_Monitor.cpp:
